// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrappers HSLWrapper component renders video element with default title 1`] = `
<video
  controls=""
  height="100%"
  src="test"
  title="Stream wrapper"
  width="100%"
/>
`;

exports[`wrappers IFrameWrapper component renders iframe element with default title 1`] = `
<iframe
  allow="accelerometer; encrypted-media; gyroscope; picture-in-picture; web-share"
  allowfullscreen=""
  height="100%"
  referrerpolicy="strict-origin-when-cross-origin"
  sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-storage-access-by-user-activation"
  src="test"
  title="IFrame wrapper"
  width="100%"
/>
`;

exports[`wrappers VideoWrapper component renders mocked VideoWrapper component with "video" class with iframe element as last child using mock data 1`] = `
<div
  class="video"
  data-testid="VideoWrapper"
>
  <button
    class="remove-video btn btn-danger"
    data-testid="remove-video"
    type="button"
  />
  <iframe
    allow="accelerometer; encrypted-media; gyroscope; picture-in-picture; web-share"
    allowfullscreen=""
    height="100%"
    referrerpolicy="strict-origin-when-cross-origin"
    sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-storage-access-by-user-activation"
    src="https://www.youtube-nocookie.com/embed/9ai3kgu5"
    title="youtube video player"
    width="100%"
  />
</div>
`;
